<!--
     Copyright (C) 2022 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
  <string name="app_name">Signals Demo</string>
  <string name="app_description">Sample app for Signals API</string>
  <string name="event_log_text">Event Log</string>
  <string name="update_signals_text">Update Signals</string>
  <string name="url_hint">Signals JSON URL</string>
  <string name="auction_text">Run Auction</string>
  <string name="auction_seller_hint">Seller for auction</string>
  <string name="auction_url_hint">Auction Server URL</string>
</resources>